# compression

./: CMakeLists.txt  CMakeSettings.json  LICENSE.MD  README.MD  THIRD_PARTY_LICENSES.MD  bootstrap_test.bat
212631kb/: lzma4.xlsx  zip4.xlsx
31610kb/: lzma3.xlsx  zip3.xlsx
6700kb/: lzma.xlsx  zip.xlsx
780kb/: lzma2.xlsx  zip2.xlsx
src/: CMakeLists.txt  data_stitcher.py  liblzma.lib  main.cpp
src/utility/: benchmark.hpp  buffer_match.hpp  common.hpp  common_xz.hpp  common_zip.hpp  compress_xz.hpp  compress_zip.hpp  compressor.hpp  decompress_xz.hpp  decompress_zip.hpp  file.hpp  filesize.hpp  utility.hpp  xz_compressor.hpp  zip_compressor.hpp
stitching/: data_stitcher.py
testing/: auto-test.bat  test.bat
